portfolio ready for deploy

--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -10,7 +10,7 @@ const { href } = Astro.props;
 
 <style>
 	a {
-		position: relative;
+		position: fixed;
 		display: flex;
 		place-content: center;
 		text-align: center;
