--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -15,7 +15,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 	
 	{ label: 'GitHub', href: 'https://github.com/Iansogotthis', icon: 'github-logo' },
 	{ label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
-	{ label: 'replit', href: 'https://replit.com/@mount88ian', icon: 'replit-logo' },
+	{ label: 'replit', href: 'https://replit.com/@mount88ian', icon: 'heart' },
 	{ label: 'YouTube', href: 'www.linkedin.com/in/webdevwonder88', icon: 'linkedin-logo' },
 ];
 ---
@@ -24,7 +24,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 	<div class="menu-header">
 		<a href="/" class="site-title">
 			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
+			Ian Mount
 		</a>
 		<menu-button>
 			<template>
