--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,14 +16,15 @@ import Icon from "../components/Icon.astro";
         tagline="Thanks for stopping by. Read below to learn more about myself and my background."
       >
         <img
-          width="1553"
-          height="873"
-          src="/assets/at-work.jpg"
-          alt="Jeanine White at work with a colleague"
+          class="center"
+          width="50%"
+          height="50%"
+          src="/assets/portfoli_alt.jpg"
+          alt="Me pondering"
         />
       </Hero>
       <section>
-        <h2 class="section-title">Background</h2>
+        <h2 class="section-title" style="text-align: center;">Background</h2>
         <div class="content">
           <p>
             Hi, my name is Ian Mount and I'm a freshly certified at Full-Stack;
@@ -55,8 +56,10 @@ import Icon from "../components/Icon.astro";
           </p>
         </div>
       </section>
+      <hr />
+      <br />
       <section>
-        <h2 class="section-title">Background</h2>
+        <h2 class="section-title" style="text-align: center;">Experience</h2>
         <div class="content">
           <p>
             From managing fast-food chains to pursuing web development, my
@@ -80,27 +83,148 @@ import Icon from "../components/Icon.astro";
           </p>
         </div>
       </section>
-      <h2 class="section-title">Education</h2>
-      <div class="content">
-        <p>Corporis voluptates tenetur laudantium.</p>
-      </div>
+      <hr />
+
+      <br />
+
+      <section>
+        <h2 class="section-title" style="text-align: center;">Education</h2>
+        <div class="content">
+          <div>
+            <ul>
+              <li>
+                <b>William Howard Taft H.S. / Jeanine Schultz Prep </b>
+                <br />
+                <p>[High School Diploma]</p>
+              </li>
+              <li>
+                <b>Oakton Community College</b>
+                <br />
+                <p>190hr [A+ certification]</p>
+              </li>
+              <br />
+              <br />
+
+              <li>
+                <b>In House Certifications and Management Training</b>
+                <br />
+                <i> Attendance of 22% clocked hours per Qt</i>
+                <br />
+                <br />
+                <h6>[topics covered annually [1-8]</h6>
+
+                <br />
+                <ol>
+                  <li>
+                    <b>Human Relations/Organizational Behavior</b>
+                    <p>
+                      Learn human relationship techniques and leadership skills
+                      for building strong employer-employee relations.
+                    </p>
+                  </li>
+                  <li>
+                    <b> Computer Applications (Technology)</b>
+                    <p>
+                      Learn the latest software applications for business
+                      including word processing, spreadsheet, database, and
+                      presentation graphics.
+                    </p>
+                  </li>
+                  <li>
+                    <b>Business Communication Skills for Managers</b>
+
+                    <p>
+                      Develop strategies for effective internal and external
+                      business communications, including verbal and nonverbal
+                      techniques, writing, and public speaking
+                    </p>
+                  </li>
+                  <li>
+                    <b> Principles of Management</b>
+                    <p>
+                      Learn key management concepts and principles to improve
+                      business efficiency and productivity.
+                    </p>
+                  </li>
+                  <li>
+                    <b> Principles of Marketing</b>
+                    <p>
+                      Learn basic marketing strategies and techniques with
+                      regard to the product, pricing, distribution, and
+                      communication.
+                    </p>
+                  </li>
+                  <li>
+                    <b> Human Resources Management</b>
+                    <p>
+                      Be prepared to handle real employee issues. Learn the
+                      skills for human resource planning, staffing, training,
+                      compensation, and managing labor relationships.
+                    </p>
+                  </li>
+                  <li>
+                    <b> Financial Management & Budgeting </b>
+                    <p>
+                      Learn to use accounting, budgeting, and other financial
+                      management tools to create, interpret, and analyze
+                      financial information for successful operation of a
+                      business.
+                    </p>
+                  </li>
+                  <li>
+                    Retail Management
+                    <p>
+                      Gain broad perspective for all facets of retail operations
+                      including: key elements of marketing and promotion,
+                      merchandising, pricing, layout, store organization, trace
+                      area analysis, site location, and customer service.
+                    </p>
+                  </li>
+                </ol>
+              </li>
+
+              <br />
+              <br />
+              <li>
+                <b>freeCodeCamp, CodeAcademy, Udemy, BloomTech, App Academy</b>
+                <br />
+                <p>
+                  [Individual self paced certifications: ("python", "react",
+                  "ruby", "HTML", "CSS", "Javascript") ]
+                </p>
+              </li>
+              <li>
+                <b>General Assembly</b>
+                <p>420hrs Full Stack Web Development Certification</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <section class="box skills-wrapper">
       <div class="skills">
-        <div class="stack gap-2 lg:gap-4">
+        <div class="stack gap-2 lg:gap-4 icon-container ">
           <Icon
-            icon="html5"
+            icon="terminal-window"
             color="var(--accent-regular)"
             size="2rem"
             gradient
           />
           <h2>HTML</h2>
           <p>Proficient in writing semantic and accessible HTML5 markup.</p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="css3"
+            icon="terminal-window"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container ">
+          <Icon
+            icon="pencil-line"
             color="var(--accent-regular)"
             size="2rem"
             gradient
@@ -110,10 +234,17 @@ import Icon from "../components/Icon.astro";
             Experienced in creating responsive and visually appealing designs
             using CSS.
           </p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="javascript"
+            icon="pencil-line"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container">
+          <Icon
+            icon="code"
             color="var(--accent-regular)"
             size="2rem"
             gradient
@@ -123,10 +254,17 @@ import Icon from "../components/Icon.astro";
             Skilled in developing dynamic and interactive web applications with
             JavaScript.
           </p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="django"
+            icon="code"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container">
+          <Icon
+            icon="strategy"
             color="var(--accent-regular)"
             size="2rem"
             gradient
@@ -136,10 +274,17 @@ import Icon from "../components/Icon.astro";
             Have had experience with building web applications using the Django
             framework.
           </p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="react"
+            icon="strategy"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container">
+          <Icon
+            icon="paper-plane-tilt"
             color="var(--accent-regular)"
             size="2rem"
             gradient
@@ -149,10 +294,17 @@ import Icon from "../components/Icon.astro";
             Have had experience with developing user interfaces using the React
             library.
           </p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="python"
+            icon="paper-plane-tilt"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container">
+          <Icon
+            icon="rocket-launch"
             color="var(--accent-regular)"
             size="2rem"
             gradient
@@ -162,78 +314,121 @@ import Icon from "../components/Icon.astro";
             Have had experience with programming with Python for various
             applications.
           </p>
-        </div>
-        <div class="stack gap-2 lg:gap-4">
           <Icon
-            icon="mongodb"
+            icon="rocket-launch"
             color="var(--accent-regular)"
             size="2rem"
             gradient
           />
-          <h2>MongoDB</h2>
-          <p>Some knowledge in working with MongoDB for database management.</p>
+        </div>
+        <br />
+        <div class="stack gap-2 lg:gap-4 icon-container">
+          <Icon
+            icon="arrow-left"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
+          <div>
+            <h2>MongoDB</h2>
+            <p>
+              Some knowledge in working with MongoDB for database management.
+            </p>
+          </div>
+          <Icon
+            icon="arrow-left"
+            color="var(--accent-regular)"
+            size="2rem"
+            gradient
+          />
         </div>
       </div>
+
+      <ContactCTA />
     </section>
 
-    <ContactCTA />
-  </div>
-
-  <style>
-    .about {
-      display: flex;
-      flex-direction: column;
-      gap: 3.5rem;
-    }
-
-    img {
-      margin-top: 1.5rem;
-      border-radius: 1.5rem;
-      box-shadow: var(--shadow-md);
-    }
-
-    section {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      color: var(--gray-200);
-    }
-
-    .section-title {
-      grid-column-start: 1;
-      font-size: var(--text-xl);
-      color: var(--gray-0);
-    }
-
-    .content {
-      grid-column: 2 / 4;
-    }
-
-    .content :global(a) {
-      text-decoration: 1px solid underline transparent;
-      text-underline-offset: 0.25em;
-      transition: text-decoration-color var(--theme-transition);
-    }
-
-    .content :global(a:hover),
-    .content :global(a:focus) {
-      text-decoration-color: currentColor;
-    }
-
-    @media (min-width: 50em) {
-      .about {
-        display: grid;
-        grid-template-columns: 1fr 60% 1fr;
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 3.5rem;
       }
 
-      .about > :global(:first-child) {
-        grid-column-start: 2;
+      img {
+        margin-top: 1.5rem;
+        border-radius: 1.5rem;
+        box-shadow: var(--shadow-md);
       }
 
       section {
-        display: contents;
-        font-size: var(--text-lg);
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        color: var(--gray-200);
+        text-align: center;
       }
-    }
-  </style>
+      h2 {
+        margin: auto;
+      }
+
+      .section-title {
+        text-align: center;
+        font-size: var(--text-xl);
+        color: var(--gray-0);
+        margin: 0 auto;
+      }
+
+      .content {
+        grid-column: 2 / 4;
+        text-align: center;
+      }
+
+      .content :global(a) {
+        text-decoration: 1px solid underline transparent;
+        text-underline-offset: 0.25em;
+        transition: text-decoration-color var(--theme-transition);
+      }
+
+      .content :global(a:hover),
+      .content :global(a:focus) {
+        text-decoration-color: currentColor;
+      }
+
+      @media (min-width: 50em) {
+        body {
+          display: grid;
+          grid-template-columns: 1fr 60% 1fr;
+          align-items: center;
+          justify-content: center;
+        }
+
+        body > :global(:first-child) {
+          grid-column-start: 2;
+        }
+
+        section {
+          display: contents;
+          font-size: var(--text-lg);
+        }
+      }
+      .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+      }
+      .icon-container {
+  display: flex;
+  
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-header {
+  text-align: left; /* or any other preferred alignment */
+}
+
+    </style>
+  </div>
 </BaseLayout>
