Revert "portfolio ready for deploy 2"
This reverts commit 3a15c4bafcb02a437e9e8f4c34035ea42cfc9ecb.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,8 +6,8 @@ import Icon from "../components/Icon.astro";
 ---
 
 <BaseLayout
-  title="About | Ian Mount"
-  description="About Ian Mount White Lorem Ipsum"
+  title="About | Jeanine White"
+  description="About Jeanine White Lorem Ipsum"
 >
   <div class="stack gap-20">
     <main class="wrapper about">
