--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -10,8 +10,8 @@ const projects = (await getCollection("work")).sort(
 ); 
 --- 
 <BaseLayout 
-  title="My Work | Ian Mount" 
-  description="Learn about Ian Mount's most recent projects" 
+  title="My Work | Jeanine White" 
+  description="Learn about Jeanine White's most recent projects" 
 > 
   <div class="stack gap-20"> 
     <main class="wrapper stack gap-8"> 
