--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,15 +53,15 @@
 		0px 16px 16px rgba(9, 11, 17, 0.1), 0px 4px 9px rgba(9, 11, 17, 0.12);
 
 	/* Text Sizes */
-	--text-sm: 0.875rem;
-	--text-base: 1rem;
-	--text-md: 1.125rem;
-	--text-lg: 1.25rem;
-	--text-xl: 1.625rem;
-	--text-2xl: 2.125rem;
-	--text-3xl: 2.625rem;
-	--text-4xl: 3.5rem;
-	--text-5xl: 4.5rem;
+	--text-sm: 0.875rem - .5%;
+	--text-base: 1rem - .5%;
+	--text-md: 1.125rem - .5%;
+	--text-lg: 1.25rem - .5%;
+	--text-xl: 1.625rem- .5%;
+	--text-2xl: 2.125rem- .5%;
+	--text-3xl: 2.625rem- .5%;
+	--text-4xl: 3.5rem- .5%;
+	--text-5xl: 4.5rem- .5%;
 
 	/* Fonts */
 	--font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
