--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -69,10 +69,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: black;
+    border: 2px solid rgb(5, 18, 5)
     width: 80%;
     margin: 0 auto;
     padding: 1em;
-    background-color: #f8f8f8;
+    background-color: #07160b;
     border-radius: 8px;
     box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.1);
   }
@@ -81,7 +83,7 @@
     width: 100%;
     height: 2.5em;
     text-align: center;
-    border: 2px solid #ddd;
+    border: 2px solid rgb(43, 43, 76);
     margin-bottom: 1em;
     padding: 0.5em;
     border-radius: 4px;
@@ -91,7 +93,7 @@
     display: block;
     margin: 0 auto;
     padding: 0.5em 1em;
-    background-color: #4caf50; /* Green */
+    background-color: #4c59af; /* Green */
     border: none;
     color: white;
     text-align: center;
@@ -105,9 +107,7 @@
   }
 
   .submit-button:hover {
-    background-color: white;
-    color: black;
-    border: 2px solid #4caf50;
+   
+    border: 2px dotted #120e2a;
   }
 </style>
-<script></script>
