relevant bug tweaks

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,8 +6,8 @@ import Icon from "../components/Icon.astro";
 ---
 
 <BaseLayout
-  title="About | Jeanine White"
-  description="About Jeanine White Lorem Ipsum"
+  title="About | Ian M"
+  description="About Ian M "
 >
   <div class="stack gap-20">
     <main class="wrapper about">
