--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,8 @@ const projects = (await getCollection('work'))
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					
+					alt="Me"
 					width="480"
 					height="620"
 					src="/public/port.jpg"
