--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,6 +16,7 @@ import Icon from "../components/Icon.astro";
         tagline="Thanks for stopping by. Read below to learn more about myself and my background."
       >
         <img
+        src="public/assets/portfoli_alt.jpg"
           class="center"
           width="50%"
           height="50%"
