--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const projects = (await getCollection('work'))
 					alt="Me"
 					width="480"
 					height="620"
-					src="/public/port.jpg"
+					src="./public/port.jpg"
 				/>
 			</header>
 
