--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import Icon from "../components/Icon.astro";
         tagline="Thanks for stopping by. Read below to learn more about myself and my background."
       >
         <img
-        src="public/assets/portfoli_alt.jpg"
+        src="../../public/assets/port.jpg/"
           class="center"
           width="50%"
           height="50%"
